# mlflow-modal

./: README.md  setup.cfg  setup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  requirements-dev.txt  requirements.txt
example/: .env  README.md  docker-compose.yaml
example/mlflow/: Dockerfile
example/mlflow-modal/: Dockerfile  predict_input_api.json  predict_input_plugin.json  requirements.txt
example/pytorch/: requirements.txt  train.py
example/tensorflow/: train.py
example/xgboost/: requirements.txt  train.py
examples/: .env  docker-compose.yaml
examples/mlflow-modal/: Dockerfile  requirements.txt
examples/pytorch/: Dockerfile  train.py
examples/tensorflow/: requirements.txt  train.py
examples/xgboost/: train.py
mlflow_modal/: __init__.py  api.py  client.py  config.py  constants.py  stub.py
tests/: test_mlflow_plugin.py
