[metadata]
name = mlflow-modal
version = 0.1.0
author = garretthoffman
author_email = garrett.lee.hoffman@gmail.com
description = Modal MLflow deployment plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/garretthoffman/mlflow-modal
keywords = mlflow, modal, serverless, machine learning
classifiers =
    Topic :: System :: Distributed Computing
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
license = Apache 2.0

[options]
packages = find:
python_requires = >=3.7
install_requires =
    modal-client
    mlflow>=1.12.0
    pydantic>=1.10.5

[options.entry_points]
    mlflow.deployments = modal=mlflow_modal
